@@ -141,8 +141,8 @@ AC_DEFINE(ADMIN_GRP, 1)
 AC_ARG_WITH(admin-group,
  	[  --disable-admin-group  disable admin group],
         if test "$enableval" = "no"; then
-			AC_DEFINE(ADMIN_GRP, 0)
-			AC_MSG_RESULT([disabling administrative group support])
+		AC_DEFINE(ADMIN_GRP, 0)
+		AC_MSG_RESULT([disabling administrative group support])
         fi
  )
 
@@ -279,7 +279,7 @@ AC_ARG_WITH(shadow,
 )
 
 AC_ARG_ENABLE(shell-check,
-	[  --disable-shell-check   disable checking for a valid shell]
+	[  --disable-shell-check   disable checking for a valid shell],
 	if test "$enableval" = "no"; then 
 		AC_DEFINE(DISABLE_SHELLCHECK, 1)
 		AC_MSG_RESULT([disabling valid shell check])
@@ -303,7 +303,7 @@ AC_ARG_WITH(tcp-wrappers,
 
 AC_ARG_ENABLE(redhat,
 	[  --enable-redhat         use redhat-style sysv configuration ],
-    if test "$enableval" = "yes"; then
+	if test "$enableval" = "yes"; then
 		sysv_style=redhat
 	fi
 	AC_MSG_RESULT([enabling redhat-style sysv support])
@@ -311,7 +311,7 @@ AC_ARG_ENABLE(redhat,
 
 AC_ARG_ENABLE(suse,
 	[  --enable-suse           use suse-style sysv configuration ],
-    if test "$enableval" = "yes"; then
+	if test "$enableval" = "yes"; then
 		sysv_style=suse
 	fi
 	AC_MSG_RESULT([enabling suse-style sysv support])
@@ -319,10 +319,20 @@ AC_ARG_ENABLE(suse,
 
 AC_ARG_ENABLE(cobalt,
 	[  --enable-cobalt         use cobalt-style sysv configuration ],
-    if test "$enableval" = "yes"; then
+	if test "$enableval" = "yes"; then
 		sysv_style=cobalt
 	fi
 	AC_MSG_RESULT([enabling cobalt-style sysv support])
+)
+
+dnl ----- timelord compilation (disabled by default)
+compile_timelord=no
+AC_ARG_ENABLE(timelord,
+	[  --enable-timelord       enable compilation of timelord server],
+	if test "$enableval" = "yes"; then
+		compile_timelord=yes
+	fi
+	AC_MSG_RESULT([enabling timelord compilation])
 )
 
 AC_ARG_WITH(uams-path,
@@ -337,7 +347,7 @@ dnl --------------------------------------------------------------------------
 
 AC_ARG_ENABLE(fhs,
 	[  --enable-fhs            use Filesystem Hierarchy Standard (FHS) compatibility],
-    if test "$enableval" = "yes"; then
+	if test "$enableval" = "yes"; then
 		uams_path="/usr/lib/netatalk"
 		config_dir="/etc/netatalk"
 		use_pam_so=yes
@@ -536,7 +546,7 @@ AC_ARG_WITH(ssl-dir,
 	[  --with-ssl-dir=PATH     specify path to openssl installation (must contain
                           lib and include dirs) ],
 	[
-		if test "x$withval" != "$xno"; then
+		if test "x$withval" != "xno"; then
 			tryssldir=$withval
 		fi
 	]
@@ -585,6 +595,7 @@ AC_SUBST(LIBS)
 AC_SUBST(CFLAGS)
 AC_SUBST(LDSHAREDFLAGS)
 AM_CONDITIONAL(SOLARIS_MODULE, test x$solaris_module = xyes)
+AM_CONDITIONAL(COMPILE_TIMELORD, test x$compile_timelord = xyes)
 AM_CONDITIONAL(USE_DHX, test x$compile_dhx = xyes)
 AM_CONDITIONAL(USE_KERBEROS, test x$compile_kerberos = xyes)
 AM_CONDITIONAL(USE_PAM_SO, test x$use_pam_so = xyes)
