@@ -1,5 +1,11 @@
 # Makefile.am for contrib/
 
-SUBDIRS = nu printing shell_utils timelord
+if COMPILE_TIMELORD
+TIMELORD = timelord
+else
+TIMELORD =
+endif
+
+SUBDIRS = nu printing shell_utils ${TIMELORD}
 
 EXTRA_DIST = ICDumpSuffixMap
